# cancel-it

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
src/: app.py  config.py  logic.py  storage.py
test/: test_logic.py  test_storage.py
