[project]
name = "cancel-it"
version = "0.1.0"
description = "A cure for the Abilene Paradox"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E: pycodestyle errors
# F: Pyflakes (bugs)
# I: Import sorting (organizes your imports automatically)
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
# src/ modules are imported bare (src is sys.path[0] under `streamlit run`)
known-first-party = ["app", "config", "logic", "storage"]
